feat: Implement adjacent blocks check.
1. Implement method to return a List<Block> of adjacent blocks.

2. (WIP) Check adjacent blocks and lock it if it is the other part of double chest.